--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,12 @@
 .header-top .logo img {
   width: 250px;
 }
+header {
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: white;
+}
 .header-top .logo img:nth-child(2) {
   display: none;
   width: 80px;
